refactor(projects): refactor specfile model